# Calculator

./: .gitignore
src/: CMakeLists.txt  calculator.pro  classWork1.pro  main.cpp  mainWindow.cpp  mainWindow.h  mainwindow.cpp  mainwindow.h  menubutton.cpp  menubutton.h  resources.qrc
src/widgets/: QHoverWatcher.h  customButton.cpp  historywidget.cpp  historywidget.h
src/widgets/buttons/: customButton.cpp  customButton.h  menuButton.cpp  menubutton.cpp  menubutton.h
src/widgets/comboBoxes/: customComboBox.cpp  customComboBox.h
src/widgets/customSpinBoxes/: CustomDoubleSpinBox.cpp  CustomDoubleSpinBox.h
src/widgets/lineEdits/: customLineEdit.cpp  customLineEdit.h  selectedLineEdit.cpp  selectedLineEdit.h
src/widgets/menu/: menu.cpp  menu.h
src/widgets/panelWidgets/: abstractPanelWidget.cpp  abstractPanelWidget.h  calculatorWidget.cpp  calculatorWidget.h  historyItem.cpp  historyItem.h  historyWidget.cpp  historyWidget.h  programmerCalculatorWidget.cpp  programmerCalculatorWidget.h
src/widgets/panels/: abstractpanel.cpp  abstractpanel.h  calculatorwidget.cpp  calculatorwidget.h  historywidget.cpp  historywidget.h
src/widgets/sections/: abstractPanelSection.cpp  abstractPanelSection.h  abstractSection.cpp  abstractSection.h  calculatorPanelSection.cpp  calculatorPanelSection.h  calculatorSection.cpp  calculatorSection.h  historyPanelSection.cpp  historyPanelSection.h  historySection.cpp  historySection.h  programmerCalculatorSection.cpp  programmerCalculatorSection.h
src/widgets/titleBars/: hideTitlebar.cpp  hideTitlebar.h  titlebar.cpp  titlebar.h  viewTitlebar.cpp  viewTitlebar.h  viewtitlebar.cpp  viewtitlebar.h
src/widgets/windows/: customWindow.cpp  customWindow.h  customwindow.cpp  customwindow.h  hideWindow.cpp  hideWindow.h
src/widgets/windows/panelWindows/: abstractPanelWindow.cpp  abstractPanelWindow.h  calculatorWindow.cpp  calculatorWindow.h  historyWindow.cpp  historyWindow.h  programmerCalculatorWindow.cpp  programmerCalculatorWindow.h
